--- a/frontas-darzelis/src/Style/ParentLanding.css
+++ b/frontas-darzelis/src/Style/ParentLanding.css
@@ -5,9 +5,13 @@
 aside {
     border: none;
     vertical-align: top;
-    min-height: 900px;
+    /*min-height: 900px;*/
     text-align: left;
     box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.075);
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 }
 
 main.row {
@@ -38,6 +42,7 @@ footer {
 }
 
 div .card {
+    display: flex;
     max-width: 450px;
     min-width: 180px;
     padding: 1em;
