BEAN-209 errors for general registration corrected + EduAdminLanding started

--- a/frontas-darzelis/src/Style/ParentLanding.css
+++ b/frontas-darzelis/src/Style/ParentLanding.css
@@ -17,6 +17,8 @@ aside {
 main.row {
     background-color: #fbf9f8; /* snow */
     padding-left: 10px;
+    justify-content: space-evenly;
+
 }
 
 footer {
