--- a/frontas-darzelis/src/App.css
+++ b/frontas-darzelis/src/App.css
@@ -5,12 +5,13 @@
 }
 
 .App {
-    height: 100vh;
+    height: 100%;
     font-family: 'Open Sans', sans-serif;
 }
 
-.container .container-fluid {
+.container, .container-fluid {
     background-color: #fbf9f8; /* snow */
+    overflow: hidden;
 }
 
 
