paslepti en upload file, bet ikelus nesimato ka ikelei

--- a/frontas-darzelis/src/Style/style.css
+++ b/frontas-darzelis/src/Style/style.css
@@ -13,3 +13,19 @@
 .next {
   margin-left: 30em;
 }
+/* input[type="file"]
+{
+  display: none;
+} */
+/* .fileUpload input.upload 
+{
+    display: inline-block;
+} */
+.upload{
+  text-decoration: underline;
+  cursor:pointer;
+}
+.file {
+  position: relative;
+  opacity: 0
+}
