--- a/frontas-darzelis/src/Style/LandingPage.css
+++ b/frontas-darzelis/src/Style/LandingPage.css
@@ -14,7 +14,7 @@ div {
 button.btn {
     background-color: #1baaa0; /* lightseagreen */
     color: #ffffff;
-    width: 150px;
+    min-width: 150px;
     padding: 0.6em 1.5em;
     border: 1px solid #ffffff;
     border-radius: 8px;
@@ -31,3 +31,23 @@ button.btn:hover {
     vertical-align: bottom;
 }
 
+.btn.btn-link {
+    background-color: #ffffff;
+    color: #282f47; /* darkslategray */
+    text-decoration-line: underline;
+    min-width: 250px;
+    padding: 0.6em 1em;
+    border: 1px solid #ffffff;
+    border-radius: 8px;
+    vertical-align: bottom;
+}
+
+.btn.btn-link:hover {
+    background-color: #ffffff;
+    color: #282f47; /* darkslategray */
+    font-weight: bolder;
+    padding: 0.6em 1em;
+    border: 1px solid #ffffff;
+    border-radius: 8px;
+    vertical-align: bottom;
+}
