admin/edu/priemimai/id/eiles page  Queue folderyje

--- a/frontas-darzelis/src/Style/style.css
+++ b/frontas-darzelis/src/Style/style.css
@@ -10,9 +10,9 @@
 .delete {
   margin-left: 4.6em;
 }
-.next {
+/* .next {
   margin-left: 30em;
-}
+} */
 /* input[type="file"]
 {
   display: none;
