validacija tevo personal code kai noriu update child data

--- a/frontas-darzelis/src/index.css
+++ b/frontas-darzelis/src/index.css
@@ -9,11 +9,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
   padding: 0;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
+    monospace;
 }
