--- a/frontas-darzelis/src/Style/style.css
+++ b/frontas-darzelis/src/Style/style.css
@@ -21,11 +21,30 @@
 {
     display: inline-block;
 } */
-.upload{
+.upload {
   text-decoration: underline;
-  cursor:pointer;
+  cursor: pointer;
 }
 .file {
   position: relative;
-  opacity: 0
+  opacity: 0;
+}
+.page-item {
+  cursor: pointer;
+}
+.sort {
+  word-wrap: break-word;
+  text-decoration: underline;
+  vertical-align: bottom;
+  cursor: pointer;
+  margin-right: 1em;
+  margin-bottom: 3em;
+  margin-top: 2em;
+}
+.sort:hover{
+  color: #1baaa0;;
+}
+.dataTables_empty{
+
+  display: none;
 }
