--- a/frontas-darzelis/src/index.css
+++ b/frontas-darzelis/src/index.css
@@ -9,8 +9,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
   padding: 0;
+  background-color: #fbf9f8;
+}
+
+div#root {
+  height: 100%;
 }
 
 code {
