--- a/frontas-darzelis/src/Style/UsersLandings.css
+++ b/frontas-darzelis/src/Style/UsersLandings.css
@@ -1,12 +1,14 @@
 .container-fluid {
     background-color: #fbf9f8; /* snow */
-    height: 100%;
+    padding-bottom: 2.5rem;
+    position: relative;
+    min-height: 100vh;
 }
 
 aside {
     border: none;
     vertical-align: top;
-    height: 100%;
+    height: 100vh;
     width: 25%;
     /*position:fixed;*/
     z-index: 1;
@@ -16,9 +18,9 @@ aside {
     /*display: flex;*/
     /*flex-direction: column;*/
     /*flex-grow: 1;*/
-    position: -webkit-sticky;
-    position: sticky;
+    position: absolute;
     top: 0;
+    bottom: 0;
 }
 
 main.row {
@@ -31,9 +33,14 @@ main.row {
 
 footer {
     background-color: white;
+    bottom: 0;
     padding-left: 25em;
-    height: 20%;
+    padding-right: 25em;
+    height: 2.5rem;
+    /*height: 20%;*/
+    width: 100%;
     text-align: center;
+    position: absolute;
 }
 
 .nav-link {
@@ -80,7 +87,7 @@ p {
     padding-right: 8px;
 }
 /*ikonos ties anketomis*/
-.fa-file-contract {
+.fa-file-contract, .fa-list-ol {
     font-size: 1.5em;
     padding-right: 8px;
     color: #8f989e; /* lightslategray */
@@ -143,7 +150,7 @@ a.btn.active {
     padding: 0.6em 1em;
     border: none;
     border-radius: 8px;
-    vertical-align: bottom;
+    text-wrap: none;
 }
 
 .btn.btn-link-1:hover {
@@ -153,9 +160,13 @@ a.btn.active {
     padding: 0.6em 1em;
     border: none;
     border-radius: 8px;
-    vertical-align: bottom;
 }
 
 td {
-    min-width: 150px;
+    /*min-width: 150px;*/
+    vertical-align: middle !important;
+}
+
+th {
+    vertical-align: middle !important;
 }
