--- a/frontas-darzelis/src/Style/style.css
+++ b/frontas-darzelis/src/Style/style.css
@@ -4,11 +4,19 @@
   font-size: 0.625em;
   display: relative;
 }
-#deleteChildData {
+#deleteChildData,
+#deleteChildApplication {
   background-color: #af4e4e;
 }
 .delete {
   margin-left: 4.6em;
+}
+.deleteApplication {
+  margin-left: 0.9em;
+  margin-top: -1.5em;
+}
+.loading {
+  margin-left: 2em;
 }
 /* .next {
   margin-left: 30em;
@@ -41,10 +49,9 @@
   margin-bottom: 3em;
   margin-top: 2em;
 }
-.sort:hover{
-  color: #1baaa0;;
+.sort:hover {
+  color: #1baaa0;
 }
-.dataTables_empty{
-
+.dataTables_empty {
   display: none;
 }
