pataisytas buto bugas

--- a/frontas-darzelis/src/Style/style.css
+++ b/frontas-darzelis/src/Style/style.css
@@ -9,7 +9,8 @@
   background-color: #af4e4e;
 }
 .delete {
-  margin-left: 4.6em;
+  margin-left: 33.7em;
+  width: 166px;
 }
 .deleteApplication {
   margin-left: 0.9em;
