Bean-248 Interactive timeline corrected mistakes + alert message if application is stopped

--- a/frontas-darzelis/src/Style/ParentLandingDashboard.css
+++ b/frontas-darzelis/src/Style/ParentLandingDashboard.css
@@ -23,3 +23,8 @@ button.btn a:active {
     border-radius: 8px;
     vertical-align: bottom;
 }
+
+div.card {
+    height: 100%;
+    width: 18rem;
+}
