sutinku susalygomis, salygos parent page'e

--- a/frontas-darzelis/src/Style/style.css
+++ b/frontas-darzelis/src/Style/style.css
@@ -140,3 +140,10 @@
 .dataTables_empty {
   display: none;
 }
+.conditions{
+  line-height: 2;
+  letter-spacing: 0.6px;
+  text-align: justify;
+  margin-right: 10em;
+  margin-left: 5em;
+}
